--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -6,11 +6,12 @@
     "files": [
         "dist/**/*"
     ],
-    "repository": "https://github.com/teckdigital/teckboard-api-js",
+    "repository": "https://github.com/teck-digital/teckboard-api-js",
     "author": "ItsZiroy <yannihahn@t-online.de>",
     "license": "MIT",
     "private": false,
     "dependencies": {
+        "@types/node": "^17.0.2",
         "axios": "^0.24.0",
         "global": "^4.4.0",
         "localforage": "^1.10.0",
