Fixes admin package, adds prepare script

--- a/packages/v1/package.json
+++ b/packages/v1/package.json
@@ -15,6 +15,7 @@
         "axios": "^0.24.0"
     },
     "scripts": {
-        "lint": "yarn eslint src/**"
+        "lint": "yarn eslint src/**",
+        "prepare": "tsc"
     }
 }
