--- a/packages/admin/package.json
+++ b/packages/admin/package.json
@@ -16,6 +16,7 @@
         "axios": "^0.24.0"
     },
     "scripts": {
-        "lint": "yarn eslint src/**"
+        "lint": "yarn eslint src/**",
+        "prepare": "tsc"
     }
 }
