--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -18,6 +18,7 @@
         "moment": "^2.29.1"
     },
     "scripts": {
-        "lint": "yarn eslint src/**"
+        "lint": "yarn eslint src/**",
+        "prepare": "tsc"
     }
 }
