--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -2,10 +2,7 @@
     "name": "@teckboard-api/core",
     "version": "1.1.1",
     "description": "The teckboard api",
-    "main": "dist/index.js",
-    "files": [
-        "dist/**/*"
-    ],
+    "main": "index.js",
     "repository": "https://github.com/teck-digital/teckboard-api-js",
     "author": "ItsZiroy <yannihahn@t-online.de>",
     "license": "MIT",
@@ -19,6 +16,7 @@
     },
     "scripts": {
         "lint": "yarn eslint src/**",
-        "prepare": "tsc"
+        "prepublishOnly": "cp package.json dist/ && tsc",
+        "publish": "npm publish ./dist"
     }
 }
