--- a/packages/v1/tsconfig.json
+++ b/packages/v1/tsconfig.json
@@ -1,5 +1,6 @@
 {
     "compilerOptions": {
+        "experimentalDecorators": true,
         /* Visit https://aka.ms/tsconfig.json to read more about this file */
         /* Projects */
         // "incremental": true,                              /* Enable incremental compilation */
@@ -12,8 +13,10 @@
         "target": "es5", /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */
         "lib": [
             "es2020",
-            "dom"
-        ],                                           /* Specify a set of bundled library declaration files that describe the target runtime environment. */
+        ], 
+        "typeRoots": [
+            "node_modules/@types"
+        ],                                          /* Specify a set of bundled library declaration files that describe the target runtime environment. */
         // "jsx": "preserve",                                /* Specify what JSX code is generated. */
         // "experimentalDecorators": true,                   /* Enable experimental support for TC39 stage 2 draft decorators. */
         // "emitDecoratorMetadata": true,                    /* Emit design-type metadata for decorated declarations in source files. */
@@ -93,7 +96,7 @@
         // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
         "skipLibCheck": true /* Skip type checking all .d.ts files. */
     },
-    "include": [
-        "./"
+    "exclude": [
+        "./dist/**/*",
     ]
 }
