--- a/packages/admin/package.json
+++ b/packages/admin/package.json
@@ -14,7 +14,6 @@
     },
     "scripts": {
         "lint": "yarn eslint src/**",
-        "prepublishOnly": "cp package.json dist/ && tsc",
-        "publish": "npm publish ./dist"
+        "build": "tsc && cp package.json dist/"
     }
 }
