--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@teckboard-api/core",
-    "version": "1.2.0",
+    "version": "1.2.4",
     "description": "The teckboard api",
     "main": "index.js",
     "repository": "https://github.com/teck-digital/teckboard-api-js",
@@ -16,7 +16,6 @@
     },
     "scripts": {
         "lint": "yarn eslint src/**",
-        "prepublishOnly": "cp package.json dist/ && tsc",
-        "publish": "npm publish ./dist"
+        "build": "tsc && cp package.json dist/"
     }
 }
