--- a/packages/v1/package.json
+++ b/packages/v1/package.json
@@ -13,8 +13,7 @@
     },
     "scripts": {
         "lint": "yarn eslint src/**",
-        "prepublishOnly": "cp package.json dist/ && tsc",
-        "publish": "npm publish ./dist"
+        "build": "tsc && cp package.json dist/"
     },
     "devDependencies": {
         "@types/quill": "^2.0.9"
