Adds readme, fixes typescript issues

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -16,6 +16,9 @@
     },
     "scripts": {
         "lint": "yarn eslint src/**",
-        "build": "tsc && cp package.json dist/"
+        "build": "tsc && cp package.json dist/",
+        "release": "cd dist && npm publish",
+        "preversion": "yarn build",
+        "postversion": "yarn release"
     }
 }
