--- a/packages/v1/tsconfig.json
+++ b/packages/v1/tsconfig.json
@@ -13,9 +13,11 @@
         "target": "es5", /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */
         "lib": [
             "es2020",
+            "dom",
         ], 
         "typeRoots": [
-            "node_modules/@types"
+            "node_modules/@types",
+            "index.d.ts"
         ],                                          /* Specify a set of bundled library declaration files that describe the target runtime environment. */
         // "jsx": "preserve",                                /* Specify what JSX code is generated. */
         // "experimentalDecorators": true,                   /* Enable experimental support for TC39 stage 2 draft decorators. */
