--- a/lerna.json
+++ b/lerna.json
@@ -1,7 +1,5 @@
 {
-  "packages": [
-    "packages/*"
-  ],
-  "version": "1.2.0",
-  "npmClient": "yarn"
+    "packages": ["packages/*"],
+    "version": "independent",
+    "npmClient": "yarn"
 }
