--- a/packages/v1/package.json
+++ b/packages/v1/package.json
@@ -17,8 +17,7 @@
         "build": "tsc && cp package.json dist/",
         "testrelease": "yarn build && cd dist && npm pack",
         "release": "cd dist && npm publish",
-        "preversion": "yarn build",
-        "postversion": "yarn release"
+        "postversion": "yarn build && yarn release"
     },
     "devDependencies": {
         "@types/lodash": "^4.14.178",
