--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -16,7 +16,7 @@
     },
     "scripts": {
         "lint": "yarn eslint src/**",
-        "build": "tsc && cp package.json dist/",
+        "build": "tsc && cp package.json dist/ && cp README.md dist/",
         "release": "cd dist && npm publish",
         "postversion": "yarn build && yarn release"
     }
