--- a/packages/v1/package.json
+++ b/packages/v1/package.json
@@ -14,7 +14,7 @@
     },
     "scripts": {
         "lint": "yarn eslint src/**",
-        "build": "tsc && cp package.json dist/",
+        "build": "tsc && cp package.json dist/ && cp README.md dist/",
         "testrelease": "yarn build && cd dist && npm pack",
         "release": "cd dist && npm publish",
         "postversion": "yarn build && yarn release"
