--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "license": "MIT",
     "private": false,
     "devDependencies": {
+        "@types/jest": "^27.4.0",
         "@typescript-eslint/eslint-plugin": "^4.21.0",
         "@typescript-eslint/parser": "^4.21.0",
         "eslint": "^7.24.0",
