--- a/packages/v1/package.json
+++ b/packages/v1/package.json
@@ -14,13 +14,18 @@
     },
     "scripts": {
         "lint": "yarn eslint src/**",
-        "build": "tsc && cp package.json dist/ && cp README.md dist/",
+        "build": "tsc -p tsconfig.build.json && cp package.json dist/ && cp README.md dist/",
         "testrelease": "yarn build && cd dist && npm pack",
         "release": "cd dist && npm publish",
-        "postversion": "yarn build && yarn release"
+        "postversion": "yarn build && yarn release",
+        "test": "jest"
     },
     "devDependencies": {
+        "@types/jest": "^27.4.0",
         "@types/lodash": "^4.14.178",
-        "@types/quill": "^2.0.9"
+        "@types/node": "^17.0.8",
+        "@types/quill": "^2.0.9",
+        "jest": "^27.4.7",
+        "ts-jest": "^27.1.2"
     }
 }
