--- a/packages/v1/tsconfig.json
+++ b/packages/v1/tsconfig.json
@@ -1,6 +1,7 @@
 {
     "compilerOptions": {
         "experimentalDecorators": true,
+        "emitDecoratorMetadata": true,
         /* Visit https://aka.ms/tsconfig.json to read more about this file */
         /* Projects */
         // "incremental": true,                              /* Enable incremental compilation */
@@ -17,7 +18,9 @@
         ], 
         "typeRoots": [
             "node_modules/@types",
-            "index.d.ts"
+            "index.d.ts",
+            "__tests__/global.d.ts",
+            "models/default/d.ts"
         ],                                          /* Specify a set of bundled library declaration files that describe the target runtime environment. */
         // "jsx": "preserve",                                /* Specify what JSX code is generated. */
         // "experimentalDecorators": true,                   /* Enable experimental support for TC39 stage 2 draft decorators. */
@@ -38,7 +41,7 @@
         // "typeRoots": [],                                  /* Specify multiple folders that act like `./node_modules/@types`. */
         // "types": [],                                      /* Specify type package names to be included without being referenced in a source file. */
         // "allowUmdGlobalAccess": true,                     /* Allow accessing UMD globals from modules. */
-        // "resolveJsonModule": true,                        /* Enable importing .json files */
+        "resolveJsonModule": true,                        /* Enable importing .json files */
         // "noResolve": true,                                /* Disallow `import`s, `require`s or `<reference>`s from expanding the number of files TypeScript should add to a project. */
         /* JavaScript Support */
         // "allowJs": true,                                  /* Allow JavaScript files to be a part of your program. Use the `checkJS` option to get errors from these files. */
@@ -96,7 +99,7 @@
         // "allowUnreachableCode": true,                     /* Disable error reporting for unreachable code. */
         /* Completeness */
         // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
-        "skipLibCheck": true /* Skip type checking all .d.ts files. */
+        "skipLibCheck": true,                                /* Skip type checking all .d.ts files. */
     },
     "exclude": [
         "./dist/**/*",
