--- a/packages/v1/package.json
+++ b/packages/v1/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@teckboard-api/v1",
-    "version": "1.4.2",
+    "version": "1.4.6",
     "description": "The teckboard api",
     "main": "index.js",
     "repository": "https://github.com/teck-digital/teckboard-api-js",
@@ -10,7 +10,9 @@
     "dependencies": {
         "@teckboard-api/core": "^1.2.5",
         "axios": "^0.24.0",
-        "lodash": "^4.17.21"
+        "laravel-echo": "^1.11.2",
+        "lodash": "^4.17.21",
+        "socket.io-client": "^2.3.1"
     },
     "scripts": {
         "lint": "yarn eslint src/**",
@@ -25,6 +27,7 @@
         "@types/lodash": "^4.14.178",
         "@types/node": "^17.0.8",
         "@types/quill": "^2.0.9",
+        "@types/socket.io-client": "^1.4.36",
         "jest": "^27.4.7",
         "ts-jest": "^27.1.2"
     }
